feat: downgrade to java 8